--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "mongoose": "^8.0.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "ws": "^8.15.1"
   }
 }
