--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
+    "paypal-rest-sdk": "^1.8.1",
     "ws": "^8.15.1"
   }
 }
