--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
-    "paypal-rest-sdk": "^1.8.1",
+    "razorpay": "^2.9.2",
     "ws": "^8.15.1"
   }
 }
