--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cropperjs": "^1.6.1",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
+    "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
     "ws": "^8.15.1"
   }
