--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
-    "razorpay": "^2.9.2",
-    "ws": "^8.15.1"
+    "razorpay": "^2.9.2"
   }
 }
