--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "sharp": "^0.33.2"
   }
 }
